--- a/src/config/config.toml
+++ b/src/config/config.toml
@@ -5,8 +5,6 @@ name = "CAIndex"
 authors = ["Ayush Pandey"]
 
 [variables]
-treeDepth = 5
-maxVerticalSpread = 1
-maxVertexDegree = 2
 graphOutputPath = "../graphOut.gv"
-graphInputPath = "../data/50/rand0020.stg"
+graphInputPath = "../data/tree.stg"
+index = "AOIndex"
